--- a/language/i18n_hr.json
+++ b/language/i18n_hr.json
@@ -4228,5 +4228,6 @@
     "CL_DV_HOB_hood_title": "napa",
     "CL_DV_RF_food_inventory": "Popis hrane",
     "p_check_email": "Provjerite svoju e-poštu",
-    "CL_DV_RF_storage_appliance": "Uređaj za pohranu"
+    "CL_DV_RF_storage_appliance": "Uređaj za pohranu",
+    "storage_appliance": "UREĐAJ ZA SKLADIŠTENJE"
 }
