--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -4228,5 +4228,6 @@
     "CL_DV_HOB_hood_title": "cappuccio",
     "CL_DV_RF_food_inventory": "Inventario alimentare",
     "p_check_email": "Per favore controlla la tua email",
-    "CL_DV_RF_storage_appliance": "Dispositivo di archiviazione"
+    "CL_DV_RF_storage_appliance": "Dispositivo di archiviazione",
+    "storage_appliance": "APPARECCHIO DI CONSERVAZIONE"
 }
