--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -4228,5 +4228,6 @@
     "CL_DV_HOB_hood_title": "Mui xe",
     "CL_DV_RF_food_inventory": "Hàng tồn kho thực phẩm",
     "p_check_email": "Vui lòng kiểm tra email của bạn",
-    "CL_DV_RF_storage_appliance": "Thiết bị lưu trữ"
+    "CL_DV_RF_storage_appliance": "Thiết bị lưu trữ",
+    "storage_appliance": "THIẾT BỊ LƯU TRỮ"
 }
