--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4228,5 +4228,6 @@
     "CL_DV_HOB_hood_title": "كَبُّوت",
     "CL_DV_RF_food_inventory": "جرد المواد الغذائية",
     "p_check_email": "يرجى التحقق من بريدك الإلكتروني",
-    "CL_DV_RF_storage_appliance": "أجهزة تخزين"
+    "CL_DV_RF_storage_appliance": "أجهزة تخزين",
+    "storage_appliance": "أجهزة التخزين"
 }
