--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4228,5 +4228,6 @@
     "CL_DV_HOB_hood_title": "капюшон",
     "CL_DV_RF_food_inventory": "Азық-түлік түгендеу",
     "p_check_email": "Электрондық поштаңызды тексеріңіз",
-    "CL_DV_RF_storage_appliance": "Сақтау құрылғысы"
+    "CL_DV_RF_storage_appliance": "Сақтау құрылғысы",
+    "storage_appliance": "САҚТАУ ҚҰРЫЛЫ"
 }
