--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -4228,5 +4228,6 @@
     "CL_DV_HOB_hood_title": "tudung",
     "CL_DV_RF_food_inventory": "Inventori Makanan",
     "p_check_email": "Sila semak e-mel anda",
-    "CL_DV_RF_storage_appliance": "Perkakas Penyimpanan"
+    "CL_DV_RF_storage_appliance": "Perkakas Penyimpanan",
+    "storage_appliance": "PERKAKAS PENYIMPANAN"
 }
