--- a/language/i18n_pl.json
+++ b/language/i18n_pl.json
@@ -4228,5 +4228,6 @@
     "CL_DV_HOB_hood_title": "kaptur",
     "CL_DV_RF_food_inventory": "Zapasy żywności",
     "p_check_email": "Proszę sprawdzić swoją pocztę e-mail",
-    "CL_DV_RF_storage_appliance": "Urządzenie pamięci masowej"
+    "CL_DV_RF_storage_appliance": "Urządzenie pamięci masowej",
+    "storage_appliance": "URZĄDZENIE DO PRZECHOWYWANIA"
 }
