--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -4228,5 +4228,6 @@
     "CL_DV_HOB_hood_title": "хоод",
     "CL_DV_RF_food_inventory": "Инвентар хране",
     "p_check_email": "Проверите своју е-пошту",
-    "CL_DV_RF_storage_appliance": "Уређај за складиштење"
+    "CL_DV_RF_storage_appliance": "Уређај за складиштење",
+    "storage_appliance": "УРЕЂАЈ ЗА СКЛАДИШТЕЊЕ"
 }
