--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -4228,5 +4228,6 @@
     "CL_DV_HOB_hood_title": "kapüşon",
     "CL_DV_RF_food_inventory": "Gıda Envanteri",
     "p_check_email": "Lütfen e-postanızı kontrol edin",
-    "CL_DV_RF_storage_appliance": "Depolama Cihazı"
+    "CL_DV_RF_storage_appliance": "Depolama Cihazı",
+    "storage_appliance": "DEPOLAMA CİHAZI"
 }
