--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -6,28 +6,28 @@
     "dashboard_things_default": "AQUILO QUE PODE FAZER",
     "dashboard_last_used_default": "ÚLTIMOS APARELHOS UTILIZADOS",
     "dashboard_more_msg_default": "MAIS APARELHOS ATIVOS",
-    "start": "COMEÇAR",
-    "stop": "PARE",
+    "start": "INICIAR",
+    "stop": "PARAR",
     "dashboard_small_card_function": "cartão pequeno",
-    "save": "SALVAR",
+    "save": "GUARDAR",
     "cancel": "CANCELAR",
     "automation": "Automação",
     "appliances": "Aparelhos",
     "add_appliances": "Adicionar aparelhos.",
     "appliance_things_to_do": "COISAS A FAZER",
-    "favorites": "FAVORITO",
+    "favorites": "FAVORITOS",
     "more": "MAIS",
     "rooms": "Divisões",
     "service": "Serviço",
-    "preferences": "Preferências",
-    "log_out": "Encerrar sessão",
+    "preferences": "Definições",
+    "log_out": "Terminar sessão",
     "setting_room_location": "Localização da divisão",
     "optional": "Opcional",
     "setting_associated_appliance": "APARELHOS ASSOCIADOS",
     "remove": "REMOVER",
-    "setting_rearrange_rooms": "Reorganizar as divisões",
+    "setting_rearrange_rooms": "Reorganizar divisões",
     "setting_add_room": "Adicionar divisão",
-    "setting_enter_room_name": "Insira o nome da divisão",
+    "setting_enter_room_name": "Inserir o nome da divisão",
     "setting_short_room_desc": "Breve descrição da divisão",
     "setting_use_profile_location": "Utilizar a localização do perfil",
     "setting_room_location_desc": "Utilizar a mesma localização que foi guardada no perfil de utilizador para a divisão.",
@@ -35,7 +35,7 @@
     "setting_postal_code": "CÓDIGO POSTAL",
     "city": "CIDADE",
     "setting_open_tickets": "PEDIDOS ABERTOS",
-    "setting_select_appliance": "Selecione o aparelho",
+    "setting_select_appliance": "Selecione aparelho",
     "setting_title": "TÍTULO",
     "setting_desc_issue": "Descrição do problema",
     "send": "ENVIAR",
@@ -80,19 +80,19 @@
     "setting_crustaceans_allergy": "Cartuchos",
     "setting_fish_allergy": "Peixe",
     "setting_mustarsd_allergy": "Mostarda",
-    "setting_sesame_seeds_allergy": "Sésamo",
+    "setting_sesame_seeds_allergy": "Sementes de sésamo",
     "setting_egg_allergy": "Ovos",
     "setting_soy_allergy": "Soja",
     "setting_gluten_allergy": "Glúten",
-    "setting_celery_allergy": "Salsão",
+    "setting_celery_allergy": "Aipo",
     "setting_sulphur_dioxide_allergy": "Dióxido de enxofre",
-    "setting_molluscs_allergy": "Molusco",
+    "setting_molluscs_allergy": "Moluscos",
     "setting_cereals_gluten_allergy": "Glúten",
     "setting_halal": "Halal",
     "setting_vegan": "Vegano",
     "setting_no_beef": "Sem carne",
     "setting_no_fish": "Sem peixe",
-    "setting_delete_account_remind_msg": "Tem a certeza de que pretende apagar a sua conta ConnectLife?",
+    "setting_delete_account_remind_msg": "Tem a certeza de que pretende eliminar a sua conta ConnectLife?",
     "setting_right_reserved": "©2020 Hisense. Todos os direitos reservados.",
     "notification_centre_appbar_title": "Centro de notificações",
     "select_all": "SELECIONAR TUDO",
@@ -406,7 +406,7 @@
     "service_ticket_create_check_userInfo": "Para criar um ticket de serviço, preencha as informações adicionais de contacto do utilizador.",
     "service_go_user_profile": "ACEDER ÀS CONFIGURAÇÕES DO UTILIZADOR",
     "room_edit_save_no_network": "A rede é inválida",
-    "add_washing_machine": "1. Quando a máquina estiver desligada, mantenha os dois botões mais à direita premidos e, ao mesmo tempo, ligue a máquina.\n2. Prima o botão\"Settings\"para entrar no menu Configurações e alterne o botão para a secção\"Wi-Fi settings\". Aceda à secção premindo o botão.\n3. Prima o botão\"Wi-Fi On/Off\", alterne o botão para a opção\"On\"e prima o botão\"Save\".\n4. De volta à secção\"Wi-Fi settings\", prima o botão\"Connection setup\"; tem 5 minutos para ligar o aparelho à rede.",
+    "add_washing_machine": "1. Quando a máquina estiver desligada, mantenha os dois botões mais à direita premidos e, ao mesmo tempo, ligue a máquina.\n2. Prima o botão\"Settings\"para entrar no menu Configurações e alterne o botão para a secção\"Wi-Fi definições\". Aceda à secção premindo o botão.\n3. Prima o botão\"Wi-Fi On/Off\", alterne o botão para a opção\"On\"e prima o botão\"Save\".\n4. De volta à secção\"Wi-Fi definições\", prima o botão\"Connection setup\"; tem 5 minutos para ligar o aparelho à rede.",
     "paring_set_up_appliance_label": "Defina as configurações do Wi-Fi doméstico do aparelho e emparelhe-o com a sua conta.",
     "paring_appliances_label": "Emparelhe o aparelho com a sua conta. O aparelho tem as configurações de Wi-Fi domésticas já configuradas.",
     "paring_set_up_appliances_title": "CONFIGURAR APARELHO",
@@ -431,7 +431,7 @@
     "share_device": "Dispositivo partilhado",
     "tap_add_name_hint": "Toque para introduzir o nome",
     "laundry_room": "Lavandaria",
-    "add_washing_machine_pair": "1. Quando a máquina estiver desligada, mantenha os dois botões mais à direita premidos e, ao mesmo tempo, ligue a máquina.\n2. Prima o botão“Settings”para entrar no menu Configurações e alterne o botão para a secção“Wi-Fi settings”. Aceda à secção premindo o botão.\n3. Na secção“Wi-Fi settings”, alterne o botão para localizar e premir o botão“Add device”.\n4. Tem 3 minutos para adicionar o dispositivo.",
+    "add_washing_machine_pair": "1. Quando a máquina estiver desligada, mantenha os dois botões mais à direita premidos e, ao mesmo tempo, ligue a máquina.\n2. Prima o botão“Settings”para entrar no menu Configurações e alterne o botão para a secção“Wi-Fi definições”. Aceda à secção premindo o botão.\n3. Na secção“Wi-Fi definições”, alterne o botão para localizar e premir o botão“Add device”.\n4. Tem 3 minutos para adicionar o dispositivo.",
     "light": "Luz",
     "timer": "Temporizador",
     "fan_level": "Nível do ventilador",
@@ -457,7 +457,7 @@
     "appliance_settings": "Configurações do aparelho",
     "lights_settings": "CONFIGURAÇÕES DE LUZES",
     "functional_light": "Luz funcional",
-    "other_settings": "OUTRAS CONFIGURAÇÕES",
+    "other_settings": "OUTRAS DEFINIÇÕES",
     "circulation_mode": "Modo de circulação",
     "appliance_information": "Informação do aparelho",
     "waranty_information": "Informações de garantia",
@@ -473,7 +473,7 @@
     "ac_wrong_email": "A conta de e-mail é inválida",
     "share_success": "SUCESSO AO PARTILHAR",
     "share_fail": "FALHA AO PARTILHAR",
-    "select_wifi": "Selecione Wi-Fi",
+    "select_wifi": "Selecionar Wi-Fi",
     "step": "Passo",
     "pind_config_wifi_step2": "Prima continuamente o ícone Wi-Fi durante 3 segundos para entrar no menu Wi-Fi.",
     "pind_config_wifi_step1_pair": "Ligue a placa. Se o ícone\"Wi-Fi\"for visível, continue com o próximo passo.\nSe não houver ícone\"Wi-Fi\", ative o Wi-Fi:\nPrimeiro, desligue novamente a placa. Em seguida, toque na tecla\"on/off\"durante 5 segundos. É emitido um sinal sonoro curto e o símbolo Wi-Fi é apresentado.",
@@ -484,14 +484,14 @@
     "afota_config_step3": "Toque no elemento deslizante realçado durante 3 segundos com um dedo.",
     "afota_config_step4": "Utilize o controlo deslizante para alternar para LIGADO.",
     "afota_config_step5": "Aguarde 3 segundos até que LIGADO comece a piscar.",
-    "afota_config_step6": "Inicie o processo de atualização através da aplicação móvel.",
+    "afota_config_step6": "Iniciar o processo de atualização através da aplicação móvel.",
     "foa_instructions": "INSTRUÇÃO DE FOA",
     "help": "Instruções",
-    "check_afota_hint": "Verifique se há atualizações de firmware de aparelhos.",
+    "check_afota_hint": "Verificar se há atualizações de firmware.",
     "rename_failed": "A alteração de nome do dispositivo falhou.",
     "pair_appliance": "EMPARELHAR APARELHO",
     "pair_content_title": "Basta emparelhar outro usuário ao seu dispositivo. É necessário que seu dispositivo esteja configurado e conectado à sua rede doméstica. Caso contrário, selecione primeiro \"Configuração da conexão\".",
-    "add_appliance_pair_failed": "Falha ao emparelhar",
+    "add_appliance_pair_failed": "Falha no emparelhamento",
     "Super_cool": "Super Cool",
     "Fast_freeze": "Super Freeze",
     "child_lock": "Bloqueio infantil",
@@ -728,7 +728,7 @@
     "hisrf_shopping_list": "Lista de compras",
     "hisrf_food_management": "gestão de alimentos",
     "hisrf_electricity_statistics_menu": "monitoramento de energia",
-    "hisrf_fresh_choice": "Minha nova escolha",
+    "hisrf_fresh_choice": "My Fresh Choice",
     "hisrf_service_hint": "Entre em contacto com o serviço pós-venda.",
     "hisrf_service_phone": "TELEFONE:",
     "hisrf_service_email": "E-MAIL:",
@@ -1377,7 +1377,7 @@
     "AL": "Albânia",
     "DZ": "Argélia",
     "AD": "Andorra",
-    "AI": "Anguilla",
+    "AI": "Anguila",
     "AG": "Antígua e Barbuda",
     "AR": "Argentina",
     "AM": "Arménia",
@@ -1416,7 +1416,7 @@
     "CZ": "República Checa",
     "DK": "Dinamarca",
     "DJ": "Djibuti",
-    "DO": "Rép. Dominicana",
+    "DO": "Rep. Dominicana",
     "EC": "Equador",
     "EG": "Egito",
     "SV": "EI Salvador",
@@ -1476,7 +1476,7 @@
     "MT": "Malta",
     "MU": "Maurícias",
     "MX": "México",
-    "MD": "Moldávia, República da",
+    "MD": "República da Moldávia",
     "MC": "Mónaco",
     "MN": "Mongólia",
     "MS": "Ilha de Montserrat",
@@ -1502,7 +1502,7 @@
     "PF": "Polinésia Francesa",
     "PT": "Portugal",
     "PR": "Porto Rico",
-    "QA": "Catar",
+    "QA": "Qatar",
     "RO": "Roménia",
     "RU": "Rússia",
     "LC": "Santa Lúcia",
@@ -1588,14 +1588,14 @@
     "request_timeout": "Tempo limite do pedido",
     "hours": "horas",
     "after_one_minute": "1 min",
-    "display_after_one_minute": "1 min",
-    "display_after_five_minute": "5 min",
-    "display_after_fifteen_minute": "15 min",
-    "display_after_thirty_minute": "30 min",
+    "display_after_one_minute": "após 1 min",
+    "display_after_five_minute": "após 5 min",
+    "display_after_fifteen_minute": "após 15 min",
+    "display_after_thirty_minute": "após 30 min",
     "display_after_sixty_minute": "60 min",
-    "pop_title": "Deseja guardar a alteração?",
+    "pop_title": "Pretende guardar a alteração?",
     "turn_off_the_sabbath": "Desligue o modo Sabbath do eletrodoméstico.",
-    "removeFailure": "O vinho foi deletado com sucesso",
+    "removeFailure": "O vinho foi removido com sucesso",
     "shelf": "Prateleira",
     "Position": "Posição",
     "kazakh": "Cazaque (KK)",
@@ -1944,10 +1944,10 @@
     "Wine": "Vinho",
     "Blood": "Sangue",
     "Coffee_or_Tea": "Café ou chá",
-    "Butter_or_Grease": "Manteiga ou Graxa",
+    "Butter_or_Grease": "Manteiga ou Gordura",
     "Chocolate": "Chocolate",
     "Kids": "Crianças",
-    "Grass": "Grama",
+    "Grass": "Relva",
     "Blueberries": "Amoras",
     "add_clothes_tip_title": "Adicione roupas!",
     "add_clothes_tip_desc": "O aparelho fará uma pausa no seu programa. Pode levar alguns minutos para adicionar roupas. Reinicie o programa na sua máquina de lavar",
@@ -3878,7 +3878,7 @@
     "jch_add_separated_ac_2": "Pressione o botão de vento esquerdo e direito no @controle remoto# 6 vezes.\nOu pressione o botão “Sleep” 8 vezes no @controle remoto com fio#.",
     "rf_uv_tech": "Tecnologia UV",
     "dimmer_des": "Desligue o LED para evitar que a luz perturbe o seu descanso à noite",
-    "power_settings": "Configuração de energia",
+    "power_settings": "Definições de energia",
     "water_tips": "Água",
     "smart_energy_key": "Energia Inteligente",
     "today_usage_key": "Utilização Atual",
@@ -3935,7 +3935,7 @@
     "energy_saved_tip_key": "Consumo real: ## kWh Economizado: ** kWh",
     "asko_oven_egg_time": "TEMPORIZADOR PARA OVOS",
     "wm86_and_td76_ui2_step1": "Ligue o dispositivo. Rode o botão para a esquerda para aceder a “Mais” e toque para aceder.",
-    "wm86_and_td76_ui2_cs_step2": "Toque para aceder às definições “Wi-Fi”. Nas definições de Wi-Fi, selecione “Configuração da ligação”.",
+    "wm86_and_td76_ui2_cs_step2": "Prima para aceder às definições “Wi-Fi” e selecione “Configuração da ligação”.",
     "wm86_and_td76_step3": "Ignore as instruções apresentadas no ecrã e clique em \"Seguinte\" duas vezes.",
     "wm86_and_td76_step4": "A rede do aparelho está agora aberta para ligação durante 5 minutos.\nClique em SEGUINTE para continuar.",
     "wm86_and_td76_ui2_p_step2": "Toque para aceder às definições “Wi-Fi”. Nas definições de Wi-Fi, selecione “Emparelhar dispositivo”.",
@@ -4226,7 +4226,9 @@
     "CL_DV_OV_stage": "Estágio",
     "CL_DV_HOB_sensitivity_level": "Nível de sensibilidade do capô automático",
     "CL_DV_HOB_hood_title": "capuz",
-    "CL_DV_RF_food_inventory": "Inventário de alimentos",
+    "CL_CF_FM_food_inventory": "Inventário de alimentos",
     "p_check_email": "Por favor, verifique seu e-mail",
-    "CL_DV_RF_storage_appliance": "Dispositivo de armazenamento"
+    "CL_CF_FM_storage_appliance": "Dispositivo de armazenamento",
+    "storage_appliance": "APARELHO DE ARMAZENAMENTO",
+    "CL_DV_RF_quickly_select_food": "Selecione rapidamente os alimentos existentes na geladeira"
 }
