--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -4226,7 +4226,9 @@
     "CL_DV_OV_stage": "Scene",
     "CL_DV_HOB_sensitivity_level": "Automatisk emhættefølsomhedsniveau",
     "CL_DV_HOB_hood_title": "hætte",
-    "CL_DV_RF_food_inventory": "Fødevareopgørelse",
+    "CL_CF_FM_food_inventory": "Fødevareopgørelse",
     "p_check_email": "Tjek venligst din e-mail",
-    "CL_DV_RF_storage_appliance": "Opbevaringsapparat"
+    "CL_CF_FM_storage_appliance": "Opbevaringsapparat",
+    "storage_appliance": "OPBEVARINGSAPPARAT",
+    "CL_DV_RF_quickly_select_food": "Vælg hurtigt eksisterende mad i køleskabet"
 }
