--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4226,7 +4226,9 @@
     "CL_DV_OV_stage": "Στάδιο",
     "CL_DV_HOB_sensitivity_level": "Επίπεδο ευαισθησίας αυτόματης κουκούλας",
     "CL_DV_HOB_hood_title": "κουκούλα",
-    "CL_DV_RF_food_inventory": "Απογραφή Τροφίμων",
+    "CL_CF_FM_food_inventory": "Απογραφή Τροφίμων",
     "p_check_email": "Ελέγξτε το email σας",
-    "CL_DV_RF_storage_appliance": "Συσκευή αποθήκευσης"
+    "CL_CF_FM_storage_appliance": "Συσκευή αποθήκευσης",
+    "storage_appliance": "ΣΥΣΚΕΥΗ ΑΠΟΘΗΚΕΥΣΗΣ",
+    "CL_DV_RF_quickly_select_food": "Επιλέξτε γρήγορα υπάρχοντα τρόφιμα στο ψυγείο"
 }
