--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -4226,7 +4226,9 @@
     "CL_DV_OV_stage": "Palcoscenico",
     "CL_DV_HOB_sensitivity_level": "Livello di sensibilità del cofano automatico",
     "CL_DV_HOB_hood_title": "cappuccio",
-    "CL_DV_RF_food_inventory": "Inventario alimentare",
+    "CL_CF_FM_food_inventory": "Inventario alimentare",
     "p_check_email": "Per favore controlla la tua email",
-    "CL_DV_RF_storage_appliance": "Dispositivo di archiviazione"
+    "CL_CF_FM_storage_appliance": "Dispositivo di archiviazione",
+    "storage_appliance": "APPARECCHIO DI CONSERVAZIONE",
+    "CL_DV_RF_quickly_select_food": "Seleziona rapidamente gli alimenti presenti nel frigorifero"
 }
