--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4226,7 +4226,9 @@
     "CL_DV_OV_stage": "Сахна",
     "CL_DV_HOB_sensitivity_level": "Автоматты сорғыштың сезімталдық деңгейі",
     "CL_DV_HOB_hood_title": "капюшон",
-    "CL_DV_RF_food_inventory": "Азық-түлік түгендеу",
+    "CL_CF_FM_food_inventory": "Азық-түлік түгендеу",
     "p_check_email": "Электрондық поштаңызды тексеріңіз",
-    "CL_DV_RF_storage_appliance": "Сақтау құрылғысы"
+    "CL_CF_FM_storage_appliance": "Сақтау құрылғысы",
+    "storage_appliance": "САҚТАУ ҚҰРЫЛЫ",
+    "CL_DV_RF_quickly_select_food": "Тоңазытқышта бар тағамды жылдам таңдаңыз"
 }
