--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -4226,7 +4226,9 @@
     "CL_DV_OV_stage": "Фаза",
     "CL_DV_HOB_sensitivity_level": "Ниво на чувствителност на автоматската хауба",
     "CL_DV_HOB_hood_title": "хауба",
-    "CL_DV_RF_food_inventory": "Инвентар на храна",
+    "CL_CF_FM_food_inventory": "Инвентар на храна",
     "p_check_email": "Ве молиме проверете ја вашата е-пошта",
-    "CL_DV_RF_storage_appliance": "Апарат за складирање"
+    "CL_CF_FM_storage_appliance": "Апарат за складирање",
+    "storage_appliance": "АПАРАТ ЗА СКЛАДИРАЊЕ",
+    "CL_DV_RF_quickly_select_food": "Брзо изберете ја постоечката храна во фрижидерот"
 }
