--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4226,7 +4226,9 @@
     "CL_DV_OV_stage": "етап",
     "CL_DV_HOB_sensitivity_level": "Рівень чутливості автоматичної капота",
     "CL_DV_HOB_hood_title": "капот",
-    "CL_DV_RF_food_inventory": "Інвентар харчування",
+    "CL_CF_FM_food_inventory": "Інвентар харчування",
     "p_check_email": "Будь ласка, перевірте свою електронну пошту",
-    "CL_DV_RF_storage_appliance": "Прилад зберігання"
+    "CL_CF_FM_storage_appliance": "Прилад зберігання",
+    "storage_appliance": "ПРИЛАД ЗБЕРІГАННЯ",
+    "CL_DV_RF_quickly_select_food": "Швидко виберіть продукти, які є в холодильнику"
 }
