--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -4226,7 +4226,9 @@
     "CL_DV_OV_stage": "Sân khấu",
     "CL_DV_HOB_sensitivity_level": "Mức độ nhạy của mui xe tự động",
     "CL_DV_HOB_hood_title": "Mui xe",
-    "CL_DV_RF_food_inventory": "Hàng tồn kho thực phẩm",
+    "CL_CF_FM_food_inventory": "Hàng tồn kho thực phẩm",
     "p_check_email": "Vui lòng kiểm tra email của bạn",
-    "CL_DV_RF_storage_appliance": "Thiết bị lưu trữ"
+    "CL_CF_FM_storage_appliance": "Thiết bị lưu trữ",
+    "storage_appliance": "THIẾT BỊ LƯU TRỮ",
+    "CL_DV_RF_quickly_select_food": "Nhanh chóng chọn thực phẩm hiện có trong tủ lạnh"
 }
