--- a/language/i18n_zh.json
+++ b/language/i18n_zh.json
@@ -4226,7 +4226,9 @@
     "CL_DV_OV_stage": "阶段",
     "CL_DV_HOB_sensitivity_level": "汽车引擎盖灵敏度等级",
     "CL_DV_HOB_hood_title": "兜帽",
-    "CL_DV_RF_food_inventory": "食品库存",
+    "CL_CF_FM_food_inventory": "食品库存",
     "p_check_email": "请查看你的电子邮件",
-    "CL_DV_RF_storage_appliance": "存储设备"
+    "CL_CF_FM_storage_appliance": "存储设备",
+    "storage_appliance": "存储设备",
+    "CL_CF_FM_quickly_select_food": "快速选择冰箱中现有的食物"
 }
