--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -4226,7 +4226,9 @@
     "CL_DV_OV_stage": "अवस्था",
     "CL_DV_HOB_sensitivity_level": "ऑटो हुड संवेदनशीलता स्तर",
     "CL_DV_HOB_hood_title": "कनटोप",
-    "CL_DV_RF_food_inventory": "खाद्य सूची",
+    "CL_CF_FM_food_inventory": "खाद्य सूची",
     "p_check_email": "कृपया अपनी ईमेल देखें",
-    "CL_DV_RF_storage_appliance": "भंडारण उपकरण"
+    "CL_CF_FM_storage_appliance": "भंडारण उपकरण",
+    "storage_appliance": "भंडारण उपकरण",
+    "CL_CF_FM_quickly_select_food": "रेफ्रिजरेटर में मौजूद खाद्य पदार्थ को जल्दी से चुनें"
 }
