--- a/language/i18n_zh-TW.json
+++ b/language/i18n_zh-TW.json
@@ -4226,7 +4226,9 @@
     "CL_DV_OV_stage": "階段",
     "CL_DV_HOB_sensitivity_level": "汽車引擎蓋靈敏度級別",
     "CL_DV_HOB_hood_title": "兜帽",
-    "CL_DV_RF_food_inventory": "食材管理",
+    "CL_CF_FM_food_inventory": "食材管理",
     "p_check_email": "請檢查您的電子郵件",
-    "CL_DV_RF_storage_appliance": "儲存裝置"
+    "CL_CF_FM_storage_appliance": "儲存裝置",
+    "storage_appliance": "儲存裝置",
+    "CL_CF_FM_quickly_select_food": "快速選擇冰箱中現有的食物"
 }
